--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -10,6 +10,7 @@ footer {
   width: 100%;
   position: relative;
   z-index: 100;
+  height: 300px
 }
 
 .footer-imagesContent {
@@ -20,8 +21,11 @@ footer {
   height: 100vh;
   clip-path: polygon(0 0, 0 0, 100% 0, 100% 0);
   background-color: red;
-  
-  @include variables.wz(small) {
+  overflow: hidden;
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -48,6 +52,9 @@ footer {
   @include variables.wz(small){
     flex-direction: column;
   }
+  @include variables.wz(medium){
+    flex-direction: column;
+  }
 }
 
 .footer-left { 
@@ -67,6 +74,15 @@ footer {
     display: none;
    }
   }
+  @include variables.wz(medium){
+   width: 100%;
+   align-items: center;
+   justify-content: center;
+   padding: 0;
+   .footer-navToFrist{
+    display: none;
+   }
+  }
   
 }
 .footer-title {
@@ -78,6 +94,10 @@ footer {
 
     @include variables.wz(small){
       font-size: 3em;
+      letter-spacing: 1px;
+    }
+    @include variables.wz(medium){
+      font-size: 4em;
       letter-spacing: 1px;
     }
   }
@@ -102,6 +122,10 @@ footer {
 
   @include variables.wz(small){
     flex-direction: column;
+  }
+  @include variables.wz(medium){
+    flex-direction: column;
+    gap: 10px;
   }
 }
 
@@ -144,9 +168,14 @@ footer {
 }
 
 .footer-info--SNS{
-  p{
+  a{
+    display: block;
     margin-bottom: 8px;
+    &:hover {
+      color: beige;
+    }
   }
+
 }
 .footer-info-secondeDown {
   margin-top: 40px;
