--- a/src/styles/layout/_tricksDetail.scss
+++ b/src/styles/layout/_tricksDetail.scss
@@ -35,6 +35,9 @@
     @include variables.wz(small){
         flex-direction: column;
     }
+    @include variables.wz(medium){
+        flex-direction: column;
+    }
 }
 
 .trickDetail-option {
@@ -66,11 +69,18 @@
         padding-right: 2.5vw;
         overflow: visible;
     }
+    @include variables.wz(medium){
+        width: 100%;
+        height: 50%;
+    }
     
+
+
+
     .trickDetail-content--title{
         @include variables.jamsil(400, 4.5em);
         margin-bottom: .2em;
-        @include fz(4.5em,1.5em)
+        @include variables.fz(1.5em,1.5em,3.5em,4.5em)
     }
     .trickDetail-content--skills {
         display: flex;
@@ -108,6 +118,9 @@
         @include variables.wz(small){
             width: 100%;
         }
+        @include variables.wz(medium){
+            width: 95%;
+        }
         p{
             @include fz(1.4em,1.1em);
             word-spacing: .3em;
@@ -129,6 +142,12 @@
     position: relative;
 
     @extend %width;
+
+    @include variables.wz(medium){
+        height: 50%;
+        width: 100%;
+    }
+
     .trickDetail-content--videoWrapper{
         width: 100%;
         height: 100%;
